# uartwise

./: .gitmodules  LICENSE  README.md  pinMapping_stm32g070cb.xlsx
firmware/: Cargo.toml  README.md  bmp.gdb
firmware/.cargo/: config
firmware/src/: encoder.rs  main.rs
oled_test/: .gitmodules  Cargo.toml  README.md  flash.sh
oled_test/.cargo/: config
oled_test/src/: command.rs  interface.rs  main.rs
pcb/: .gitignore  jitter_kicad_ws.kicad_wks  pinMapping_stm32g070cb.xlsx  seral-logger-prototype-cache.lib  seral-logger-prototype.kicad_pcb  seral-logger-prototype.pro  seral-logger-prototype.sch  serial-logger-prototype-cache.lib  serial-logger-prototype.kicad_pcb  serial-logger-prototype.pro  serial-logger-prototype.sch  serial-logger-prototype.xlsx
pcb/production/: Jitter-1111_L0-1__100x30__acryl-zwart-6mm.dxf  Jitter-1111_L1-1__100x30__acryl-zwart-2mm.dxf  Jitter-1111_L2-1__100x30__acryl-transparant-2mm.dxf
