[package]
authors = ["Ingmar Jager <ingmarjager@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "oled-test"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
nb = "0.1.2"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.stm32g0xx-hal]
features = ["stm32g07x", "rt"]
path = "./stm32g0xx-hal"



# this lets you use `cargo fix`!
[[bin]]
name = "oled-test"
test = false
bench = false


[profile.dev]
opt-level = 1
debug = true
codegen-units = 1 # better optimizations
# lto = true

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
